fix: animation rendering on mobile

--- a/components/Navbar.module.scss
+++ b/components/Navbar.module.scss
@@ -46,7 +46,7 @@
 
 .socialImage {
     &:hover {
-        color: var(--color-grey)
+        color: "#909090"
     }
 }
 
